# toyrender

./: .gitignore  Cargo.toml  build.rs  readme.md
meshes/: axes.glb  room.glb  sphere.glb
shaders/: Common.slang  Sampling.slang  Sky.slang  accumulator.slang  ao_raychit.glsl  ao_raychit.rchit  ao_raygen.glsl  ao_raymiss.glsl  atrous.glsl  atrous.slang  cdf_invert.slang  cdf_map.slang  deferred.slang  deferred_frag.glsl  deferred_vert.glsl  denoise_temporal.glsl  denoise_temporal.slang  depth_convert.slang  depth_gradient.slang  light.slang  light_frag.glsl  light_vert.glsl  manifest.toml  octa_map.slang  pt_raygen.glsl  pt_reference.slang  pt_rt.slang  sky.glsl  sky.slang  taa.slang  taa_compute.glsl  tonemap.slang  tonemap_frag.glsl  triangle_frag.glsl  triangle_vert.glsl  variance.slang
shaders/common/: debug_modes.glsl  defs.glsl  sampling.glsl
src/: app.rs  args.rs  camera.rs  err.rs  image.rs  import.rs  input.rs  main.rs  math.rs  mesh.rs  renderer.rs  scene.rs  shapes.rs  vulkan.rs
src/app/: frame_stats.rs
src/renderer/: buffers.rs  debug.rs  descriptors.rs  mesh_collector.rs  passes.rs  pipeline_builder.rs  push_const.rs  quality.rs  render_target.rs  shader_loader.rs
src/renderer/buffers/: env.rs  global.rs  mod.rs  view_proj.rs
src/renderer/context/: mod.rs
src/renderer/mesh_subsystem/: mod.rs
src/renderer/passes/: denoise.rs  depth_debug.rs  gbuf_raster.rs  mod.rs  pathtrace.rs  shading.rs  sky.rs  taa.rs  tonemap.rs
src/renderer/passes/sky/: importance_map.rs
src/renderer/reference_renderer/: acc.rs  mod.rs  pt.rs
src/renderer/resource_subsystem/: mod.rs
src/renderer/stats/: mod.rs
src/vulkan/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  image_view.rs  instance.rs  mesh.rs  pipeline.rs  render_pass.rs  rt.rs  sampler.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  uniform.rs  vertex.rs
src/vulkan/swapchain/: framebuffer.rs  image_view.rs
