[package]
name = "toyrender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ash = "0.37.3"
env_logger = "0.10.0"
log = "0.4.20"
sdl2 = "0.35.2"
thiserror = "1.0.48"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
gltf = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }
gpu-allocator = {version = "0.24.0", features = ["vulkan"], default-features = false}