[package]
name = "toyrender"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ash = "0.37.3"
env_logger = "0.11.2"
log = "0.4.20"
sdl2 = "0.37.0"
thiserror = "2.0.12"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
gltf = "1.3.0"
clap = { version = "4.4.7", features = ["derive"] }
gpu-allocator = { version = "0.26.0", features = ["vulkan"], default-features = false }
toml = "0.8.8"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde = { version = "1.0.195", features = ["derive"] }
imgui = "0.12.0"
imgui-sdl2-support = { version = "0.13.0" }
imgui-rs-vulkan-renderer = { version = "~1.13.0", features = ["gpu-allocator", "dynamic-rendering"] }

[build-dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }