[package]
name = "toyrender"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ash = "0.38.0"
env_logger = "0.11.9"
log = "0.4.29"
sdl2 = "0.37.0"
thiserror = "2.0.18"
nalgebra = "0.34.1"
nalgebra-glm = "0.20.0"
gltf = "1.3.0"
clap = { version = "4.5.58", features = ["derive"] }
gpu-allocator = { version = "0.27.0", features = ["vulkan"], default-features = false }
toml = "0.9.12"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
serde = { version = "1.0.195", features = ["derive"] }
imgui = "0.12.0"
imgui-sdl2-support = { version = "0.13.0" }
imgui-rs-vulkan-renderer = { version = "~1.16.0", features = ["gpu-allocator", "dynamic-rendering"] }

[build-dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }